<resources>
    <string name="app_name">My Application</string>
    <string name="everest">EVEREST</string>
    <string name="phone_status_info">phone status info</string>
    <string name="Screen">Экран</string>
    <string name="Sensors">Датчики</string>
    <string name="Battery">Батарея</string>
    <string name="Telephone">Телефон и сеть</string>
    <string name="everest2">EVEREST</string>
    <string name="x">\"Accelerometer Not Supported \"</string>
    <string name="y">\"Accelerometer Not Supported \"</string>
    <string name="z">\"Accelerometer Not Supported \"</string>
    <string name="xGyro">\"Gyro Not Supported \"</string>
    <string name="yGyro">\"Gyro Not Supported \"</string>
    <string name="zGyro">\"Gyro Not Supported \"</string>
    <string name="xMagno">\"Magno Not Supported \"</string>
    <string name="yMagno">\"Magno Not Supported \"</string>
    <string name="zMagno">\"Magno Not Supported \"</string>
    <string name="Light">\"light Not Supported \"</string>
    <string name="pressure">\"Pressure Not Supported \"</string>
    <string name="temp">\"Temp Not Supported \"</string>
    <string name="humi">\"humi Not Supported \"</string>
    <string name="item">\О программе \</string>
    <string name="Text1">Курсовой проект</string>
    <string name="Text2">Приложение для мониторинга состояния телефона и вывода на экран показаний встроенных датчиков</string>
    <string name="Text3">Участники проекта:</string>
    <string name="Text4">Попов И, Бушуева А, Швейцер Н:</string>

</resources>